--- a/main.html
+++ b/main.html
@@ -6,9 +6,19 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body style="background-color:yellow; text-align:center;">
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+    <div>
+		<h1 id="f1">Flowers photos</h1>
+		<p>Flowers, also known as blooms and blossoms, are the reproductive structures of flowering plants.</p>
+	</div>
+	<div>
+		<h1 id="f2">Roses pictures</h1>
+		<p>Rose is a beautiful flower and There are over three hundred species .</p>
+	</div>
+	
+	
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
